feat: align landslide warning levels
